--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.1",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.31.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.8.1"
   }
 }
