--- a/views/package.json
+++ b/views/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "socket.io-client": "^4.8.1"
   },
