--- a/views/package.json
+++ b/views/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.9",
     "axios": "^1.7.8",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "socket.io-client": "^4.8.1"
